--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
-DB_USER=aluno
-DB_PASSWORD=toor
+DB_USER=root
+DB_PASSWORD=Victor@12
 DB_DATABASE=projetoAutomoveis
 PORT=3001
 SECRET_KEY = 'Projetojavaong123'
